fix text overflow in musicflux-item component

--- a/src/app/shared/components/musicflux-item/musicflux-item.component.scss
+++ b/src/app/shared/components/musicflux-item/musicflux-item.component.scss
@@ -1,6 +1,8 @@
 .musicflux-item {
+  width: 150px;
+
   &__card {
-    width: 150px;
+    width: inherit;
     height: 150px;
   }
 
@@ -12,6 +14,9 @@
     margin-top: 1rem;
     p {
       text-align: center;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
     }
   }
 }
